<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/login_title"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <EditText
        android:id="@+id/text_identification"
        android:layout_width="329dp"
        android:layout_height="43dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:fontFamily="@font/lato_light"
        android:inputType="text"
        android:text="@string/identification_text"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="330dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/lato_light"
        android:inputType="text"
        android:text="@string/password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_identification" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/big_button_height"
        android:layout_marginTop="24dp"
        android:width="@dimen/big_button_width"
        android:background="@drawable/big_blue_button"
        android:fontFamily="@font/lato"
        android:text="@string/login_text_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_password" />

    <TextView
        android:id="@+id/text_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/forgot_text"
        android:textColor="#0C0909"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <TextView
        android:id="@+id/text_click_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:text="@string/click_here_link"
        android:textColor="@color/link"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toEndOf="@+id/text_forgot"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <TextView
        android:id="@+id/text_no_yet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/no_yet_acc_text"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_forgot" />

    <Button
        android:id="@+id/button_logup"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/big_button_height"
        android:layout_marginTop="16dp"
        android:width="@dimen/big_button_width"
        android:background="@drawable/big_blue_button"
        android:fontFamily="@font/lato"
        android:text="@string/register_here_text_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_no_yet" />

    <ImageView
        android:id="@+id/img_spot"
        android:layout_width="418dp"
        android:layout_height="140dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/spot" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="34dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_identification"
        app:srcCompat="@mipmap/eye_blocked" />

</androidx.constraintlayout.widget.ConstraintLayout>